src/objects/Use_Pattern_Chart__c.object
<CustomObject>
    <fields>
        <fullName>AL_Amount__c</fullName>
        <label>AL Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AL_Cost__c</fullName>
        <label>AL Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AL_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>AL Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AL_Increase_Decrease__c</fullName>
        <label>AL Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AL_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AL Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CA_Amount__c</fullName>
        <label>CA Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Cost__c</fullName>
        <label>CA Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>CA Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Increase_Decrease__c</fullName>
        <label>CA Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CA Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_Amount__c</fullName>
        <label>CO Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Cost__c</fullName>
        <label>CO Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>CO Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CO_Increase_Decrease__c</fullName>
        <label>CO Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CO_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CO Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CR_Amount__c</fullName>
        <label>CR Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Cost__c</fullName>
        <label>CR Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CR_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>CR Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CR_Increase_Decrease__c</fullName>
        <label>CR Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CR Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Treatment</label>
        <referenceTo>HRB_Form__c</referenceTo>
        <relationshipLabel>Use Pattern Chart</relationshipLabel>
        <relationshipName>Use_Pattern_Chart</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Use Pattern Chart</relationshipLabel>
        <relationshipName>Use_Pattern_Chart</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DO_Amount__c</fullName>
        <label>DO Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_Cost__c</fullName>
        <label>DO Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DO_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>DO Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DO_Increase_Decrease__c</fullName>
        <label>DO Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DO_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DO Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HA_Amount__c</fullName>
        <label>HA Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HA_Cost__c</fullName>
        <label>HA Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HA_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>HA Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HA_Increase_Decrease__c</fullName>
        <label>HA Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HA_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HA Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H_Amount__c</fullName>
        <label>H Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H_Cost__c</fullName>
        <label>H Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>H Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H_Increase_Decrease__c</fullName>
        <label>H Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>H Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD_Amount__c</fullName>
        <label>MD Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Cost__c</fullName>
        <label>MD Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MD_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week</inlineHelpText>
        <label>MD Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MD_Increase_Decrease__c</fullName>
        <label>MD Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MD_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MD Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SD_Amount__c</fullName>
        <label>SD Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Cost__c</fullName>
        <label>SD Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SD_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>SD Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SD_Increase_Decrease__c</fullName>
        <label>SD Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SD_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SD Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Amount__c</fullName>
        <label>SO Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Cost__c</fullName>
        <label>SO Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>SO Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Increase_Decrease__c</fullName>
        <label>SO Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SO_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SO Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steps_you_could_take__c</fullName>
        <label>Steps you could take</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR_Amount__c</fullName>
        <label>TR Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Cost__c</fullName>
        <label>TR Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>TR Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR_Increase_Decrease__c</fullName>
        <label>TR Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TR_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TR Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thoughts__c</fullName>
        <label>Thoughts</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UP_Amount__c</fullName>
        <label>UP Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UP_Cost__c</fullName>
        <label>UP Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UP_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>UP Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UP_Increase_Decrease__c</fullName>
        <label>UP Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UP_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UP Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XX_Amount__c</fullName>
        <label>XX Amount</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XX_Cost__c</fullName>
        <label>XX Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>XX_Days__c</fullName>
        <inlineHelpText>Number of days used Drug this week, 1-7</inlineHelpText>
        <label>XX Days</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XX_Increase_Decrease__c</fullName>
        <label>XX Increase/Decrease</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>XX_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>XX Use</label>
        <type>Checkbox</type>
    </fields>
    <label>Use Pattern Chart</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Client_Treatment__c</columns>
        <columns>AL_Use__c</columns>
        <columns>CA_Use__c</columns>
        <columns>CO_Use__c</columns>
        <columns>CR_Use__c</columns>
        <columns>DO_Use__c</columns>
        <columns>HA_Use__c</columns>
        <columns>MD_Use__c</columns>
        <columns>SD_Use__c</columns>
        <columns>SO_Use__c</columns>
        <columns>TR_Use__c</columns>
        <columns>XX_Use__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Use-{ddmmyy}-{0000}</displayFormat>
        <label>Use Pattern Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Use Pattern Chart</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>